Issue IMCMS-747 Make generic export from RB4 and import to RB6: - improve ui on small screens

--- a/src/main/webapp/imcms/css/admin/imcms-super-admin.css
+++ b/src/main/webapp/imcms/css/admin/imcms-super-admin.css
@@ -32,6 +32,26 @@
     }
 }
 
+@media screen and (max-height: 1200px){
+    .sections-container .sections-container__edit-area{
+        height: 68%;
+    }
+
+    .sections-container .sections-container__edit-area.references{
+        height: 88%;
+    }
+}
+
+@media screen and (max-height: 970px){
+    .sections-container .sections-container__edit-area{
+        height: 63%;
+    }
+
+    .sections-container .sections-container__edit-area.references{
+        height: 84%;
+    }
+}
+
 .imcms-head__exit {
     position: absolute;
     top: 13px;
